...
import HealthKitBridge
import HealthKit

/// A custom cell to show the details of an event
class EventTableViewCell: UITableViewCell {
    
    @IBOutlet private weak var attachmentImageView: UIImageView!
    @IBOutlet private weak var streamIdLabel: UILabel!
    @IBOutlet private weak var typeLabel: UILabel!
    @IBOutlet private weak var contentLabel: UILabel!
    @IBOutlet private weak var attachmentLabel: UILabel!
    @IBOutlet weak var addAttachmentButton: UIButton!
    @IBOutlet private weak var verifiedLabel: UITextField!
    @IBOutlet private weak var verifiedView: UIStackView!
    
    @IBOutlet private weak var typeStackView: UIStackView!
    @IBOutlet private weak var contentStackView: UIStackView!
    @IBOutlet private weak var attachmentStackView: UIStackView!
    
...
        }
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        let addEventButton = UIBarButtonItem(barButtonSystemItem: .add, target: self, action: #selector(addEvent))
        addEventButton.accessibilityIdentifier = "addEventButton"
        tabBarController?.navigationItem.leftBarButtonItem = addEventButton
        
        let refreshControl = UIRefreshControl()
        refreshControl.attributedTitle = NSAttributedString(string: "Fetching last events")
        refreshControl.addTarget(self, action: #selector(getEvents), for: .valueChanged)
        tableView.refreshControl = refreshControl
        
        tableView.allowsSelection = false
        tableView.estimatedRowHeight = 100;
        tableView.rowHeight = UITableView.automaticDimension;
        tableView.accessibilityIdentifier = "eventsTableView"
    }
    
    override func viewWillAppear(_ animated: Bool) {
        tabBarController?.navigationItem.leftBarButtonItem?.isEnabled = true
    }
    
...
    }
    
    /// Creates a new event from the fields in a `UIAlertController` and sends a `event.create` request within a callbatch
    @objc private func addEvent() {
        let alert = UIAlertController(title: nil, message: nil, preferredStyle: .actionSheet)
        
        alert.addAction(UIAlertAction(title: "Simple event", style: .default) { _ in
            let alert = UIAlertController().newEventAlert(title: "Create an event", message: nil, tak: self.tak) { params in
                var apiCall: APICall = [
                    "method": "events.create",
                    "params": params
                ]
                
...
                        self.handleEventCreationError(params: params, handleResults: handleResults, error)
                    }
                }
            }
            self.present(alert, animated: true)
        })
        alert.addAction(UIAlertAction(title: "Event with attachment", style: .default) { _ in
            self.eventId = nil
            self.selectAttachment()
        })
        alert.addAction(UIAlertAction(title: "Cancel", style: .cancel, handler: nil))
        
        self.present(alert, animated: true)
...
        if let id = eventId {
            let media = Media(key: "file-\(UUID().uuidString)-\(String(describing: token))", filename: "image.png", data: pickedPngData, mimeType: "image/png")
            let boundary = "Boundary-\(UUID().uuidString)"
            guard let httpBody = connection?.createData(with: boundary, from: nil, and: [media]) else { return }
            connection?.addFormDataToEvent(eventId: id, boundary: boundary, httpBody: httpBody).catch { error in
                let innerAlert = UIAlertController(title: "Error", message: error.localizedDescription, preferredStyle: .alert)
                innerAlert.addAction(UIAlertAction(title: "OK", style: .default, handler: nil))
                self.present(innerAlert, animated: true, completion: nil)
            }
        } else {
            let media = Media(key: "file-\(UUID().uuidString)-\(String(describing: token))", filename: "image.png", data: pickedPngData, mimeType: "image/png")
            
            connection?.createEventWithFormData(event: params, parameters: nil, files: [media]).catch { error in
...
