...
        listVC?.connection = connection
        listVC?.tak = tak
        
        let mapVC = viewControllers?[1] as? ConnectionMapViewController
        mapVC?.connection = connection
        
        navigationController?.navigationBar.accessibilityIdentifier = "connectionNavBar"
    }
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        configureUI()
...
        service?.info().then { serviceInfo in self.navigationItem.title = serviceInfo.name }
            .catch { _ in self.navigationItem.title = "Last events" }
        navigationItem.largeTitleDisplayMode = .automatic
        
        self.connection?.username()
        .then { username in
            let userButton = UIBarButtonItem(title: username, style: .plain, target: self, action: #selector(self.openUserMenu))
            userButton.accessibilityIdentifier = "userButton"
            self.navigationItem.rightBarButtonItem = userButton
            self.navigationItem.hidesBackButton = true
        }
    }
    
...
